# multini

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  demo.cc  grocery_list.ini  multini.hh  multini_tests.cc
.github/workflows/: build.yml
